[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/characters/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enemies/sheeping_rock-spritesheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/characters/SheepingRock.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:ShouldMove")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:ShouldMove")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Wakeup"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6, 6 )

[node name="SheepingRock" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, -3 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4

[node name="WalkingCast" type="RayCast2D" parent="Sprite" index="0"]
position = Vector2( 0, -4.76837e-07 )
enabled = true
cast_to = Vector2( -8, 0 )
collision_mask = 65

[node name="AnimationPlayer" parent="." index="3"]
autoplay = "Idle"
anims/Damage = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Wakeup = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="AnimationTree" parent="." index="4"]
anim_player = NodePath("")

[node name="EnemyHead" parent="." index="5" groups=[
"EnemyHead",
]]

[node name="CollisionShape2D" parent="EnemyHead" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 7 )
one_way_collision = false

[node name="CollisionShape2D" parent="EnemyHit" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 8 )

[node name="WakenArea" type="Area2D" parent="." index="7"]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="WakenArea" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 9 )

[node name="LeftCliffCheck" type="RayCast2D" parent="." index="8"]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RightCliffCheck" type="RayCast2D" parent="." index="9"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="CollisionShape2D" parent="EnemyHurt" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 10 )

[connection signal="area_entered" from="EnemyHead" to="." method="_on_EnemyHead_anim_area_entered"]
